--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;500&display=swap');
-@import './theme/theme.css';
+@import './modules/Manager/theme/theme.css';
 
 body {
   margin: 0;
