--- a/src/components/Knowledge/Knowledge.css
+++ b/src/components/Knowledge/Knowledge.css
@@ -48,3 +48,25 @@
   font-size: 0.7rem;
   height: 22px;
 } 
+
+.icon-button {
+  color: var(--primary-main);
+  width: 28px;
+  height: 28px;
+  border-radius: 50%;
+  background-color: transparent;
+  cursor: pointer;
+  opacity: 1;
+  transition: background-color 0.3s ease, opacity 0.3s ease;
+}
+
+.icon-button:hover {
+  background-color: var(--primary-lighter);
+}
+
+.icon-button.disabled {
+  color: var(--text-disabled);
+  background-color: var(--action-disabled-background);
+  cursor: not-allowed;
+  opacity: 0.3;
+}
